tooling/nargo_cli/tests/snapshots/execution_success/regression_8739/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main() {
    // Safety: comment added by `nargo expand`
    unsafe {
        func_2()
    }
}

unconstrained fn func_2() {
    let mut a: [&mut bool; 1] = [&mut true];
    let mut idx_b: u32 = 0;
    while *a[0] {
        if idx_b == 0 {
            break;
        }
    }
}
